# MyFinancePackage

./: .gitignore  .try.ipynb  LICENSE  README.md  pyproject.toml
basic_functions/: __init__.py  ear.py  mc_european_call.py
exercices notebooks/: Gambler's Ruin.ipynb  Gambler's_Ruin.ipynb
myfinance/: __init__.py
myfinance/portfolio/: returns.py
myfinance/risk/: simulations.py
notebooks/: 00_Intro_To_Financial_Python.ipynb  01_Gambler's_Ruin.ipynb
