[project]
name = "MyFinancePackage"
version = "0.1.0"
description = "A package where I group the tools that I use"
authors = [
    { name="Mohammed Said Anezary", email="msanezary@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
